# internal/controller/http/v1/project.go
@@ -68,6 +68,15 @@ func (pr *projectRoutes) getAllProjects(c *gin.Context) {
 	c.JSON(http.StatusOK, projectListResponse{responseList})
 }
 
+// @Summary GetProjectByUUID
+// @Tags Projects
+// @Description Get project by UUID
+// @Param uuid path string true "Enter id book"
+// @Success 200 {object} projectDTO
+// @Failure 400 {object} errResponse
+// @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
+// @Router /api/v1/project/{uuid} [get]
 func (pr *projectRoutes) getProjectByUUID(c *gin.Context) {
 	access, err := c.Cookie("access")
 	if err != nil {
@@ -92,6 +101,14 @@ func (pr *projectRoutes) getProjectByUUID(c *gin.Context) {
 	c.JSON(http.StatusOK, projectToDTO(project))
 }
 
+// @Summary CreateProject
+// @Tags Projects
+// @Description Create project
+// @Param input body projectDTO true "enter info project"
+// @Success 201 {object} responseUUID
+// @Failure 400 {object} errResponse
+// @Failure 500 {object} errResponse
+// @Router /api/v1/project [post]
 func (pr *projectRoutes) createProject(c *gin.Context) {
 	access, err := c.Cookie("access")
 	if err != nil {
